Closed Bug 384623 Opened 17 years ago Closed 17 years ago

renaming root folder in the bookmarks tree doesn't update the tree view

Categories

(Firefox :: Bookmarks & History, defect, P3)

defect

Tracking

()

VERIFIED FIXED
Firefox 3 alpha6

People

(Reporter: dietrich, Assigned: asaf)

References

Details

Attachments

(1 file)

STR:
1. open the bookmarks organizer
2. open the properties dialog for the root folder in the left pane
3. change the title and close the dialog

Expected result: the root folder in the left pane shows the change

Actual result: the root folder has the old title
Assignee: nobody → mano
Target Milestone: --- → Firefox 3 alpha6
Attached patch patchSplinter Review
Attachment #268567 - Flags: review?(dietrich)
Blocks: 376725
Status: NEW → ASSIGNED
Priority: -- → P3
mano, am i understanding this change correctly?

- all node types now implement OnItemChanged, and update their own properties via that method.

- the query result no longer forwards node changes to observing folder nodes, instead finding the nodes in the observing folder nodes and calling the nodes' OnItemChanged method directly.
Correct.
Comment on attachment 268567 [details] [diff] [review]
patch

r=me, thanks
Attachment #268567 - Flags: review?(dietrich) → review+
mozilla/toolkit/components/places/src/nsNavHistoryResult.cpp 1.102
mozilla/toolkit/components/places/src/nsNavHistoryResult.h 1.41
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
quick question, as I update my patch for bug #383572

+    // simple case: Just notify the folder nodes direct
+    NS_ENSURE_SUCCESS(rv, rv);
+    ENUMERATE_BOOKMARK_OBSERVERS_FOR_FOLDER(aItemId,
+        OnItemChanged(aItemId, aProperty, aIsAnnotationProperty, aValue));
+    return NS_OK;

just be:

+    // simple case: Just notify the folder nodes direct
+    ENUMERATE_BOOKMARK_OBSERVERS_FOR_FOLDER(aItemId,
+        OnItemChanged(aItemId, aProperty, aIsAnnotationProperty, aValue));
+    return NS_OK;
Er, yeah, oops.
> Er, yeah, oops.

Thanks for the response.  I'll fix it with my patch to #383572
I just spun off bug 385139, to cover the "Showing [name of bookmarks]" not being dynamically updated.

The rest of this bug--that the tree widget itself is dynamically updated on "Save Changes" in the bookmark folder's property dialog, is Verified FIXED in:

Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9a6pre) Gecko/20070619 Minefield/3.0a6pre
Status: RESOLVED → VERIFIED
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h".

In Thunderbird 3.0b, you do that as follows:
Tools | Message Filters
Make sure the correct account is selected. Click "New"
Conditions: Body   contains   places-to-b-and-h
Change the action to "Delete Message".
Select "Manually Run" from the dropdown at the top.
Click OK.

Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter.

Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: