Bug 384623 - renaming root folder in the bookmarks tree doesn't update the tree view. r=dietrich.